# Lycosidae

./: .gitignore  README.md  pyproject.toml
lycosidae_src/: ciqual.py  ciqual_models.py  conn_models.py  nutrition_models.py
minio/: docker-compose.yml
minio/nginx/: nginx.conf
